--- a/package.json
+++ b/package.json
@@ -19,5 +19,13 @@
   "dependencies": {
     "@prisma/client": "^5.7.0",
     "express": "^4.18.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SamaMostafa1/Clinic.git"
+  },
+  "bugs": {
+    "url": "https://github.com/SamaMostafa1/Clinic/issues"
+  },
+  "homepage": "https://github.com/SamaMostafa1/Clinic#readme"
 }
