--- a/Registration/services/registration/package.json
+++ b/Registration/services/registration/package.json
@@ -1,9 +1,7 @@
 {
   "name": "testprisma",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
-
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,13 +11,13 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.4",
-    "prisma": "^5.7.0",
+    "prisma": "^5.7.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "@prisma/client": "^5.7.0",
     "express": "^4.18.2"
-  }
+  },
+  "description": ""
 }
-
