--- a/Service/package.json
+++ b/Service/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@prisma/client": "^5.7.0",
     "@types/cors": "^2.8.17",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
