--- a/client/package.json
+++ b/client/package.json
@@ -39,5 +39,11 @@
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "index.js",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "eslintConfig": {
+    "rules": {
+      "@typescript-eslint/no-explicit-any": "off",
+      "no-useless-catch": "off"
+    }
+  }
 }
