--- a/Service/package.json
+++ b/Service/package.json
@@ -44,7 +44,8 @@
   "eslintConfig": {
     "rules": {
       "@typescript-eslint/no-explicit-any": "off",
-      "no-useless-catch": "off"
+      "no-useless-catch": "off",
+      "@typescript-eslint/no-unused-vars": "off"
     }
   }
 }
