--- a/Service/package.json
+++ b/Service/package.json
@@ -30,7 +30,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "simple-hl7": "^3.2.4"
   },
   "repository": {
     "type": "git",
